#155 support unified jvm logging format with tag "gc" (level = info) and decorations tags,level,uptime (-Xlog:gc:file=<filename>)